--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <div class='container'>
   <h1>Willywick Point</h1>
   <img src='http://maps.googleapis.com/maps/api/staticmap?center=40.7134984,-73.9387827&zoom=17&size=400x400&maptype=roadmap&sensor=false&format=png&visual_refresh=true&markers=size:mid%7Ccolor:yellow%7C40.7134984,-73.9387827'>
+  <a class="twitter-timeline" href="https://twitter.com/WillywickPoint" data-widget-id="473505485937590272">Tweets by @WillywickPoint</a>
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 </body>
 </html>
